--- a/client/src/App.css
+++ b/client/src/App.css
@@ -129,12 +129,12 @@ a{
   z-index:500;
 }
 .carousel-control-next-icon:hover{
- /*  background-color:#3c4f57!important; */
+  background-color:#3c4f57!important;
   border-radius:50%;
   opacity:0.7;
 }
 .carousel-control-prev-icon:hover{
-/*   background-color:#3c4f57!important; */
+  background-color:#3c4f57!important;
   border-radius:50%;
   opacity:0.7;
 }
@@ -144,6 +144,7 @@ a{
   margin-right:0%;
   margin-left:0%;
 }
+
 
 /* FORM LOGIN */
 #logForm{
